# imperfect_trainings

./: .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  data.dvc  imperfect-training-a827b028141a.json  imperfect-training.json  output_file.prof  pyproject.toml  requirements.txt  tryout.py
.dvc/: config
.github/workflows/: tests.yml
data/: make_data.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
fastapi/: data_drift.py  generate_reference_data.py  main.py  qa_database.csv  reference_database.csv  report.html  report_tests.html
imperfect_trainings/: __init__.py  config_train.yaml  predict_model.py  train_model.py  trainingmo.py
imperfect_trainings/config/: default_config.yaml
imperfect_trainings/config/experiment/: baseline.yaml  exp10.yaml  exp20.yaml  exp30.yaml  exp30yaml
imperfect_trainings/data/: make_dataset.py
models/: prueba.ipynb
outputs/2024-01-14/10-16-53/.hydra/: hydra.yaml
outputs/2024-01-14/10-28-31/.hydra/: hydra.yaml
outputs/2024-01-14/10-36-55/.hydra/: hydra.yaml
outputs/2024-01-14/10-42-01/.hydra/: hydra.yaml
outputs/2024-01-14/12-11-58/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-14/12-51-12/.hydra/: hydra.yaml
outputs/2024-01-14/13-03-48/.hydra/: hydra.yaml
outputs/2024-01-14/13-06-59/.hydra/: hydra.yaml
outputs/2024-01-14/13-35-30/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-14/13-37-24/.hydra/: config.yaml  hydra.yaml
reports/: README.md
tests/: __init__.py  test_data.py  test_seed.py
(+80 files in other folders)
